# tambourine-voice

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  welcome-first-time-contributors.yml
app/: .gitignore  package.json  pnpm-lock.yaml
app/src/: App.tsx  OverlayApp.tsx  main.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: audio.rs  events.rs  history.rs  lib.rs  settings.rs  state.rs
app/src-tauri/src/commands/: export_import.rs  history.rs  mod.rs  settings.rs
app/src-tauri/src/focus/: macos.rs  mod.rs  watcher.rs  windows.rs
app/src/components/: DeviceSelector.tsx  HistoryPanel.tsx  HotkeyInput.tsx
app/src/contexts/: ConnectionContext.tsx
app/src/hooks/: useNativeAudioTrack.ts
docs/: 404.html  architecture-diagram.md  focus-context-plan.md  index.md  llms-full.txt  llms.txt
examples/cardiology/: tambourine-prompt-advanced.md  tambourine-prompt-dictionary.md  tambourine-prompt-main.md
examples/default/: tambourine-prompt-advanced.md  tambourine-prompt-dictionary.md  tambourine-prompt-main.md
scripts/: generate-llms-full.sh
server/: .env.example  dictation_server.py  docker-compose.yml  main.py  pyproject.toml
server/api/: config_api.py
server/config/: settings.py
server/processors/: __init__.py  context_manager.py  transcription_buffer.py
server/protocol/: messages.py
server/utils/: turn_credentials.py
turn-server/: Dockerfile  docker-compose.yml  turnserver.conf
turn-server/elasticbeanstalk/: Dockerrun.aws.json  README.md
(+13 files in other folders)
