[package]
name = "voice-dictation"
version = "1.0.0"
description = "Customizable AI-powered voice dictation tool"
license = "AGPL-3.0"
authors = ["you"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "voice_dictation_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"

# Keyboard automation
enigo = "0.6.1"
arboard = "3.6.1"

# Async runtime
tokio = { version = "1.48.0", features = ["rt", "sync"] }

# Settings and history
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
dirs = "6.0"

# Audio playback
rodio = { version = "0.20", default-features = false, features = ["wav"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
